--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,7 @@
   <body>
     <div class="container">
       <h1>Covid 19 Vaccine Avaibility</h1>
+      <p>This site shows only those centers where slots are available.</p>
       <form action="/" method="post">
         <label for="dis">Select Your District</label>
         <select class="form-control" name="dis" id="dis">
