Update to title and table class

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Saikat Cowin API</title>
+    <title>Vaccine Slots by Saikat</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>Covid 19 Vaccine Avaibility</h1>
-      <p>This site shows only those centers where slots are available.</p>
+      <p>This site shows only those centers in West Bengal where slots are available.</p>
       <form action="/" method="post">
         <label for="dis">Select Your District</label>
         <select class="form-control" name="dis" id="dis">
