--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>COWIN Slots by Saikat</title>
+    <title>Vaccine Slots by Saikat</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <h1>Covid 19 Vaccine Avaibility - <%= title%></h1>
       <div class="table-responsive">
-        <table class=" table-responsive table table-dark table-striped">
+        <table class="table table-dark table-striped">
           <thead>
             <tr>
               <th style="width:25%">Center Name</th>
