Change to copyright

--- a/views/noslots.ejs
+++ b/views/noslots.ejs
@@ -14,6 +14,9 @@
       <div class="table-responsive">
         <h1>No slots available in any center.</h1>
       </div>
+      <footer>
+        Copyright Saikat Paul, 2021
+      </footer>
     </div>
   </body>
 </html>
