--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,6 +67,8 @@
           </tbody>
         </table>
       </div>
+      <br />
+      <p>For Official COWIN portal <a href="https://cowin.gov.in">Click Here</a> </p>
       <footer>
         Copyright Saikat Paul, 2021
       </footer>
