--- a/views/noslots.ejs
+++ b/views/noslots.ejs
@@ -14,6 +14,8 @@
       <div class="table-responsive">
         <h1>No slots available in any center.</h1>
       </div>
+      <br />
+      <p>For Official COWIN portal <a href="https://cowin.gov.in">Click Here</a> </p>
       <footer>
         Copyright Saikat Paul, 2021
       </footer>
