Added home redirect

--- a/views/noslots.ejs
+++ b/views/noslots.ejs
@@ -16,6 +16,11 @@
       </div>
       <br />
       <p>For Official COWIN portal <a href="https://cowin.gov.in">Click Here</a> </p>
+      <form class="" action="/home" method="post">
+        <button type="submit" id="submit" name="submit" class="btn btn-light">GO HOME</button>
+      </form>
+      <br>
+      <br>
       <footer>
         Copyright Saikat Paul, 2021
       </footer>
