--- a/views/noslots.ejs
+++ b/views/noslots.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="0T2ygrDZr44peLSCV4NyK4XVBrUpcl4qw9xQrbwKaLM" />
     <title>Vaccine Slots by Saikat</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
